nginx/manifests/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: tondeka-app
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 10
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: registry.digitalocean.com/toibets/nginx:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3030
          volumeMounts:
          - name: static-storage
            mountPath: /usr/src/app/static
          - name: nginx-config
            mountPath: /etc/nginx/conf.d
      volumes:
      - name: static-storage
        nfs:
          path: /toibets/
          readOnly: false
          server: 10.108.0.7
      # - name: nginx-config
      #   emptyDir: {}
      - name: nginx-config
        configMap:
          name: nginx-config
