nginx/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: tondeka-app
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
    - port: 3030
      targetPort: 3030
      protocol: TCP
